# social-media-litmus

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.adoc  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  ECOSYSTEM.scm  LICENSE  META.scm  README.adoc  README.md  ROADMAP.adoc  RSR_COMPLIANCE.md  STATE.scm
.claude/: CLAUDE.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  container-policy.yml  deploy.yml  hypatia-scan.yml  language-policy.yml  scorecard-enforcer.yml  scorecard.yml
.well-known/: dc.xml
infrastructure/database/: README.md  schema.sql
infrastructure/database/migrations/: 001_initial_schema.sql
infrastructure/monitoring/: prometheus.yml
services/analyzer/: Dockerfile  main.py  pyproject.toml
services/analyzer/app/: config.py  database.py  logging_config.py  workers.py
services/analyzer/app/nlp/: analyzer.py
services/analyzer/app/routers/: analysis.py  guidance.py  health.py
services/collector/: Cargo.toml  Dockerfile  README.md
services/collector/src/: main.rs  models.rs  platforms.rs
services/dashboard/: Dockerfile
services/publisher/: Dockerfile  package.json
services/publisher/src/: index.js
services/publisher/src/config/: index.js
services/publisher/src/database/: index.js
services/publisher/src/monitoring/: metrics.js
services/publisher/src/queue/: index.js
services/publisher/src/routes/: index.js
services/publisher/src/services/: email.js  guardrails.js
tools/cli/: backup.sh  migrate.sh  restore.sh
tools/scripts/: dev-start.sh  dev-stop.sh  setup-dev.sh  test-all.sh
(+2 files in other folders)
