[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nuj-analyzer"
version = "0.1.0"
description = "NLP-powered policy change analysis service"
authors = [{name = "NUJ Social Media Monitor Team"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.12.0",
    "redis>=5.0.0",
    # AI/NLP
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "spacy>=3.7.0",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "sentence-transformers>=2.2.0",
    "difflib",
    # Text processing
    "nltk>=3.8.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.0",
    "python-Levenshtein>=0.23.0",
    # HTTP
    "httpx>=0.25.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "python-json-logger>=2.0.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
